# tief-gang-list

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: lint-backend.yml  lint-frontend.yml
backend/: .gitignore  Justfile  README.md  main.py  openapi.json  pyproject.toml
backend/app/: __init__.py  db.py  main.py
backend/app/crud/: __init__.py  entry_event.py  event.py  guest.py  guest_count.py  registration.py
backend/app/endpoints/: __init__.py  entry_event.py  event.py  guest.py  guest_count.py  registration.py  user.py
backend/app/helper/: seed.py
backend/app/helpers/: seed.py  validators.py
backend/app/models/: __init__.py  entry_event.py  event.py  guest.py  guest_count.py  registration.py
backend/app/schemas/: __init__.py  entry_event.py  event.py  guest.py  guest_count.py  registration.py
frontend/: .eslintrc.json  .gitignore  .proxyrc  Justfile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: api.tsx  apis.tsx  app.tsx  i18n.tsx  index.html  index.tsx  router.tsx
frontend/src/components/: navigation.tsx  page_header.tsx
frontend/src/layout/: admin_layout.tsx  admin_page_layout.tsx  page_layout.tsx  root.tsx
frontend/src/pages/: error-page.tsx  error.tsx  event.tsx  events.tsx
frontend/src/routes/: event.tsx  events.tsx  root.tsx
