[project]
name = "tief-gang-list"
version = "0.0.1"
description = "A guest management tool for the Tiefgang hackspace."
authors = [
  { name = "Arne Beer", email = "contact@arne.beer" },
  { name = "Merle Hoffmann", email = "hoffmannmerle@web.de" },
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "python-dateutil>=2",
  "fastapi[all]>=0.110",
  "sqlalchemy-utils>=0.41",
  "fastapi-sqlalchemy>=0.2",
  "psycopg2>=2.9.5",
  "typer[all]>=0.12",
]


[project.urls]
Repository = "https://github.com/dasmerlon/tief-gang-list"


[tool.uv]
dev-dependencies = ["ruff>=0.8", "faker>=25"]

# Check the Ruff documentation for more info on how to configure this
# General docs: https://docs.astral.sh/ruff/configuration/
# Explicit docs for individual settings: https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = [".venv", "__init__.py"]

[tool.ruff.lint]
select = [
  "E",   # Pycodestyle
  "F",   # Pyflakes
  "I",   # Isort
  "UP",  # Language feature updates
  "RUF", # Ruff Rules
]
fixable = [
  "E",
  "F",
  "I",
  "UP",  # Language feature updates
  "RUF", # Ruff Rules
]

# 4. Ignore `E402` (import violations) in all `__init__.py` and misc files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
